replaced "!" with "F" for forced rule modifier

--- a/niced.8
+++ b/niced.8
@@ -84,7 +84,7 @@ Actions and parameters:
 
 - modifiers:
     - \fBI\fP - case-insensitive pattern
-    - \fB!\fP - forced rule, reapplied every full scan
+    - \fBF\fP - forced rule, reapplied every full scan
     - \fBR\fP - recursive: \fB1...\fP, default is \fBinf\fP
 
 - nice:
