removed parameter for idle ionice

--- a/niced.8
+++ b/niced.8
@@ -93,7 +93,7 @@ Actions and parameters:
 - ionice:
     - \fBr\fP - realtime ionice: \fB0...7\fP, default is \fB4\fP
     - \fBb\fP - best-effort ionice: \fB0...7\fP, default is \fB4\fP
-    - \fBi\fP - idle ionice: \fB0...7\fP, default is \fB4\fP
+    - \fBi\fP - idle ionice
 
 - oom:
     - \fBo\fP - oom_adj: \fB-17...15\fP, default is \fB0\fP
