use re.fullmatch(), new enclosing regex pattern

--- a/niced.8
+++ b/niced.8
@@ -103,6 +103,8 @@ Actions and parameters:
 
 Patterns are regular expressions, case-sensitive by default.
 
+The entire command including parameters is matched.
+
 If your pattern begins with \fB^\fP or \fB(\fP, it is matched literally. This
 means you have to keep in mind a potential full path before the executable name
 or the parameters after it.
@@ -110,7 +112,7 @@ or the parameters after it.
 Otherwise \fBniced\fP takes care of those for you by enclosing your pattern with
 the following regular expression syntax:
 
-\fB(^|[^\\s]*/)\fP and \fB(\\s|$)\fP
+\fB([^\\s]*/)?\fP and \fB(\\s.*)?\fP
 
 .SS EXAMPLES
 
